Video fix on mobile

--- a/_sass/_responsive-max479.scss
+++ b/_sass/_responsive-max479.scss
@@ -759,6 +759,12 @@
   margin: 0;
 }
 
+.jx-grid-item-full {
+  margin-bottom: 12px;
+  width:100%;
+  height: 100%;
+}
+
 .jx-grid-item .jx-date-box{
   width: 150px;
     height: 150px;
