--- a/_sass/_responsive-min480-max767.scss
+++ b/_sass/_responsive-min480-max767.scss
@@ -472,6 +472,12 @@
 			margin: 0;
 		}
 
+		.jx-grid-item-full {
+		  margin-bottom: 12px;
+		  width:100%;
+		  height: 100%;
+		}
+
 		.jx-grid-item .jx-date-box{
 			width: 210px;
 			height: 210px;
